overworld/src/components/BasicRender/BasicRender.css
#main-container {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  /* flex-direction: column; */
  overflow: hidden;
}

#canvas-container {
  position: relative;
  /* display: flex; */
  justify-content: center;
  align-items: center;
  /* border: 2px solid rgb(128, 128, 128); */
  /* border: 2px solid rgba(255, 255, 255, 0); */
  /* background-color: gray; */
  /* background-color: rgb(255, 192, 150); */
  /* background-color: rgb(119, 183, 168); */
  padding: 0px;
  /* padding-top: -1px; */
  overflow: hidden;
  width: fit-content;
  height: fit-content;
  cursor: none;
  /* animation: canvas_scale 10s ease-in-out; */
  transform-origin: center;
}

#instructions {
  color: white;
  user-select: none;
}

.pixel-tone {
  content: " ";
  position: absolute;
  top: -22px;
  left: 0;
  bottom: 0;
  right: 0;
  /* width: 100%; */
  /* height: 100%; */
  padding-top: -21px;
  /* background: radial-gradient(rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 1) 100%); */
  /* background: radial-gradient(rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 1) 80%); */
  /* background: black; */
  background-image: url('../../assets/backgrounds/crt_pixel_2.png');
  /* background-image: url('../../assets/backgrounds/crt_pixel_black.png'); */
  /* background: linear-gradient(rgba(255, 0, 0, .1) 33%, rgba(0, 255, 0, .1) 33%, 66%, rgba(0, 0, 255, .1) 66%); */
  /* background: linear-gradient(rgba(255, 0, 0, .12) 25%, rgba(0, 255, 0, .1) 25%, 50%, rgba(0, 0, 255, .1) 50%, 75%, rgba(0, 0, 0, 0.3) 75%); */
  /* background: linear-gradient(90deg, rgba(0, 255, 0, .1) 33%, rgba(255, 0, 0, .1) 33%, 66%, rgba(0, 0, 255, .1) 66%); */
  /* background: linear-gradient(90deg, rgba(0, 255, 0, .3) 33%, rgba(255, 0, 0, .1) 33%, 66%, rgba(0, 0, 255, .1) 66%); */
  z-index: 101;
  /* background-size:  4px 4px; */
  background-size:  4px 4px;
  background-position: center;
  pointer-events: none;
  mix-blend-mode: hard-light;
  /* mix-blend-mode: color-dodge; */
  mix-blend-mode: soft-light;
  /* mix-blend-mode: color; */
  /* mix-blend-mode: color-burn; */
  opacity: .4;
  overflow: hidden;
  /* animation: pixel_fade 16s ease-in-out; */
}

.pixel-mask {
  content: " ";
  position: absolute;
  top: -22px;
  left: 0;
  bottom: 0;
  right: 0;
  /* width: 100%; */
  /* height: 100%; */
  padding-top: -21px;
  /* background: radial-gradient(rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 1) 100%); */
  /* background: radial-gradient(rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 1) 80%); */
  /* background: black; */
  background-image: url('../../assets/backgrounds/crt_pixel_clear.png');
  /* background: linear-gradient(rgba(255, 0, 0, .1) 33%, rgba(0, 255, 0, .1) 33%, 66%, rgba(0, 0, 255, .1) 66%); */
  /* background: linear-gradient(rgba(255, 0, 0, .12) 25%, rgba(0, 255, 0, .1) 25%, 50%, rgba(0, 0, 255, .1) 50%, 75%, rgba(0, 0, 0, 0.3) 75%); */
  /* background: linear-gradient(90deg, rgba(0, 255, 0, .1) 33%, rgba(255, 0, 0, .1) 33%, 66%, rgba(0, 0, 255, .1) 66%); */
  /* background: linear-gradient(90deg, rgba(0, 255, 0, .3) 33%, rgba(255, 0, 0, .1) 33%, 66%, rgba(0, 0, 255, .1) 66%); */
  z-index: 102;
  /* background-size:  4px 4px; */
  background-size:  4px 4px;
  background-position: center;
  pointer-events: none;
  /* mix-blend-mode: hard-light; */
  /* mix-blend-mode: screen; */
  /* mix-blend-mode: soft-light; */
  /* mix-blend-mode: color; */
  /* mix-blend-mode: color-burn; */
  opacity: 1;
  overflow: hidden;
  /* animation: pixel_fade 16s ease-in-out; */
}

.scanline-tone {
  content: " ";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  /* width: 100%; */
  /* height: 100%; */
  margin-top: 0px;
  /* background: linear-gradient(90deg, rgba(0, 255, 0, .1) 33%, rgba(255, 0, 0, .1) 33%, 66%, rgba(0, 0, 255, .1) 66%); */
  /* background: radial-gradient(rgba(0, 0, 0, 0) 40%, 50%, rgb(0, 0, 0) 100%); */
  /* background: linear-gradient(rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 70%), linear-gradient(90deg, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, .2) 70%); */
  /* background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); */
  background: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, 0) 30% 70%, rgba(0, 0, 0, .8) 70% 100%);
  /* background: linear-gradient(rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1)); */
  z-index: 103;
  background-size: 100% 4px;
  /* background-size: 4px 4px; */
  pointer-events: none;
  /* mix-blend-mode: normal; */
  /* mix-blend-mode: overlay; */
  opacity: .7;
  overflow: hidden;
  /* animation: scanline-fade 16s ease-in-out; */
}

.blur {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  /* background-color: white; */
  /* backdrop-filter: blur(0px) brightness(120%) contrast(100%) saturate(100%); */
  backdrop-filter: blur(0px) brightness(120%) contrast(100%) saturate(100%);
  /* filter: blur(5px); */
  z-index: 104;
  /* mix-blend-mode: color-burn; */
  /* opacity: .4; */
  /* overflow: hidden; */
  /* animation: blur 6s ease-in-out; */
}


#backgroundCanvas {
  /* filter: contrast(160%) saturate(200%) brightness(200%); */
  /* filter: contrast(180%) brightness(130%); */
  /* filter: brightness(110%) contrast(120%) saturate(85%); */
  /* width: 99vw; */
  /* height: 100vh; */
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  image-rendering: pixelated;
  width: fit-content;
  height: fit-content;
  z-index: 2;
  /* animation: scale-background 16s ease-in-out; */
  transform-origin: center;
  display: none;

}

#spriteCanvas {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  image-rendering: pixelated;
  width: fit-content;
  height: fit-content;
  z-index: 3;
  /* animation: scale-background 16s ease-in-out; */
  transform-origin: center;
  opacity: 0;
  display: none;

}

#foregroundCanvas {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  image-rendering: pixelated;
  width: fit-content;
  height: fit-content;
  z-index: 3;
  /* animation: scale-background 16s ease-in-out; */
  transform-origin: center;
  opacity: 0;
  display: none;

}

#cursorCanvas {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  image-rendering: pixelated;
  width: fit-content;
  height: fit-content;
  z-index: 10;
  /* animation: scale-background 16s ease-in-out; */
  transform-origin: center;
  opacity: 0;
  display: none;

}

#collisionCanvas {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  image-rendering: pixelated;
  width: fit-content;
  height: fit-content;
  z-index: -9;
  /* animation: scale-background 16s ease-in-out; */
  transform-origin: center;
}

#comboCanvas {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  image-rendering: pixelated;
  width: fit-content;
  height: fit-content;
  z-index: 29;
  /* animation: scale-background 16s ease-in-out; */
  transform-origin: center;
  /* display: none; */
  /* filter: blur(1px); */
  /* mix-blend-mode: hard-light; */
  /* opacity: 1; */
}

#pixelCanvas {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  image-rendering: pixelated;
  width: fit-content;
  height: fit-content;
  z-index: 28;
  /* animation: scale-background 16s ease-in-out; */
  transform-origin: center;
  /* mix-blend-mode: hard-light; */
  /* filter: brightness(200%) */
  display: none;

}

@keyframes pixel_fade {
  0%{
    /* mix-blend-mode: multiply; */
    background-size:  26px 26px;
    opacity: 1;
    margin-top: -26px;
    margin-left: -13px;

  } 100% {
    /* mix-blend-mode: hard-light; */
    background-size:  4px 4px;
    opacity: 0;
    margin-top: -4px;
    margin-left: 0px;
    /* mix-blend-mode: multiply; */

  }
}
@keyframes canvas_scale {
  0%{
    /* mix-blend-mode: multiply; */
    background-size:  26px 26px;
    /* transform: scale(6.5, 6.5); */
    margin-top: -26px;
    margin-left: -13px;

  } 100% {
    /* mix-blend-mode: hard-light; */
    background-size:  4px 4px;
    /* transform: scale(1, 1); */
    margin-top: -4px;
    margin-left: 0px;
    /* mix-blend-mode: multiply; */

  }
}

@keyframes scale-background {
  0%{
    /* width: 660%; */
    /* height: 653%; */
    transform: scale(6.5, 6.5);
    image-rendering: optimizeSpeed;
    /* width: 651%;
    height: 642%; */
  } 100% {
    /* width: 100%; */
    /* height: 100%; */
    transform: scale(1, 1);
    image-rendering: pixelated;
  }
}

@keyframes scanline-fade {
  0%{
    opacity: 0;
  } 80%{
    opacity: 0;
  } 100% {
    opacity: .3;
  }
}


@keyframes blur {
  0%{
    backdrop-filter: blur(.9px) brightness(116%) contrast(100%) saturate(100%);

  } 100% {
    backdrop-filter: blur(0px) brightness(116%) contrast(100%) saturate(100%);
  }
}


/* #stamina-container {
  position: absolute;
  top: -16px;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
} */

/* #stamina-bar {
  background-color: gray;
  height: 12px;
  width: 200px;
  border-radius: 6px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding-left: 2px;
  padding-right: 1px;
}

#stamina-level {
  background-color: lightseagreen;
  height: 8px;
  border-radius: 4px;
} */

